2004-06-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b169

	* Change: Add a method for admin password recovery -
	  If the file "setup/resetadmin" exists, the login requirement
	  is bypassed

	* Change: Remove the permissions check from gallerySanityCheck()

	* Change: Remove configure.(bat|sh) and secure.(bat|sh)

	* Change: Add warning to write.inc warning user that (if it exists)
	  the Gallery configuration will not be secure until they remove "resetadmin"

2004-06-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b168

	* Change:  Add user security to config wizard (!!)
	  If a Gallery has been configured, require the user to login as
	  an admin before allowing them to reconfigure using the config wizard.
	  Users configuring for the first time are allowed to bypass the login
	  requirement.

	  Still needed:  A method to reset the administrator password if it's lost.

2004-06-02 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b167

	* New: Enable mod_rewrite for GeekLog

2004-06-01 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b166

	* Fix: Removed warnings in publish_xp

	* Change: Change Text "Error Messages" to "Debug Messages"

	* New: publish_xp is now available for GeekLog

2004-06-01  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.4-cvs-165

	* Fix: Major security issue with init.php, which allowed anybody
	  to login as any user (including admin) with no password, by 
	  emulating that Gallery was embedded.

2004-06-01  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b164

	* Change: Clear up some PHP_NOTICEs in the config wizard

	* Change: view_album.php - Change a dynamic sort function into 
	  a static one to save time and make debugging easier.

2004-05-31  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b163

	* Change: Move guid generation explicitly to album creation, and
	  photo add/delete to save processing time.

	* Change: Correct photo count on albums.php to not include albums
