@@ -13,6 +13,7 @@
 includeHtmlWrap("wrapper.header");
 ?>
 
+<!-- search.header begin -->
 <table width="100%" border=0>
   <tr>
     <td>
