@@ -1,3 +1,13 @@
+2004-06-02 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b170
+
+	* Change: Removed Caption for Custom Fields
+
+	* Change: Tweaked publish_XP Docs
+
+	* Change: dos2unix setup/login.inc
+
+	* Fix: Removed Warning in search when Gallery is embedded
+
 2004-06-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b169
 
 	* Change: Add a method for admin password recovery -
